--- a/admin/index.html
+++ b/admin/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>Quản Lý Nhà Hàng</title>
+    <title>Freedom | Quản Lý Nhà Hàng</title>
   </head>
   <body>
     <div id="root"></div>
