--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Nhà Hàng | Đặt Món Online</title>
+    <title>Freedom | Đặt Món Online</title>
   </head>
   <body>
     <div id="root"></div>
